Adiciona integração com Firebase, sincronização offline/online e alertas visuais

--- a/index.html
+++ b/index.html
@@ -341,6 +341,10 @@ document.addEventListener('DOMContentLoaded', () => {
   installBtn.style.display = 'flex';
 });
 </script> -->
+
+<!-- Banco de dados online-->
+<script type="module" src="./js/tarefas.js"></script>
+<script type="module" src="./js/sync.js"></script>
 </body>
 </html>
 
