Corrigido caminho dos scripts para assets/js

--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@ document.addEventListener('DOMContentLoaded', () => {
 </script> -->
 
 <!-- Banco de dados online-->
-<script type="module" src="./js/tarefas.js"></script>
-<script type="module" src="./js/sync.js"></script>
+<script type="module" src="./assets/js/tarefas.js"></script>
+<script type="module" src="./assets/js/sync.js"></script>
 </body>
 </html>
 
