Adicionado banner verde de conexão restabelecida

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>Ger. de Tarefas</title>
 </head>
 <body class="dark-mode">
+  <div id="banner-offline"></div>
   <!--Botão dark-mode-->
   <button id="toggleDarkMode" class="btn btn-dark mb-3">
     <i id="iconDarkMode" class="bi bi-moon-fill" style="color:#FFD700;"></i> Alternar Tema
