Adicionado Firebase Auth, login persistente e integração com Firestore

--- a/index.html
+++ b/index.html
@@ -343,6 +343,13 @@ document.addEventListener('DOMContentLoaded', () => {
 </script> -->
 
 <!-- Banco de dados online-->
+<!-- Inicializa o Firebase -->
+<script type="module" src="./assets/js/firebase.js"></script>
+
+<!-- Sistema de autenticação -->
+<script type="module" src="./assets/js/auth.js"></script>
+
+<!-- Scripts principais do app -->
 <script type="module" src="./assets/js/tarefas.js"></script>
 <script type="module" src="./assets/js/sync.js"></script>
 </body>
