Integrado Firebase Auth no cadastro e login (sincronização entre dispositivos)

--- a/index.html
+++ b/index.html
@@ -345,6 +345,8 @@ document.addEventListener('DOMContentLoaded', () => {
 <!-- Banco de dados online-->
 <!-- Inicializa o Firebase -->
 <script type="module" src="./assets/js/firebase.js"></script>
+<script type="module" src="./assets/js/auth_pin.js"></script>
+
 
 <!-- Sistema de autenticação -->
 <script type="module" src="./assets/js/auth.js"></script>
