--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   </button>
   
   <!--Ícone de login e cadastro-->
-  <div class="container py-5 text-center">
-    <button class="btn btn-outline-light btn-lg mb-4" onclick="alternarFormulario()">
-      <i class="bi bi-person-circle me-2"></i> Entrar ou Cadastrar
+  <div class="container py-5 text-center" >
+    <button class="btn btn-outline-light btn-lg mb-4" onclick="alternarFormulario()" >
+      <i class="bi bi-person-circle me-2" ></i> Entrar ou Cadastrar
     </button>
   
     <!-- Formulário de login e cadastro -->
@@ -257,6 +257,11 @@
     Swal.fire('Alerta direto no navegador!');
   </script> -->
   <script src="assets/js/scripts.js"></script>
+  <!-- Banco de dados online
+  <script type="module" src="assets/js/firebase.js"></script>
+  <script type="module" src="assets/js/tarefas.js"></script>
+  <script type="module" src="assets/js/sync.js"></script>
+  <script type="module" src="assets/js/auth.js"></script>-->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <!-- Script de rodar offline -->
@@ -341,19 +346,6 @@ document.addEventListener('DOMContentLoaded', () => {
   installBtn.style.display = 'flex';
 });
 </script> -->
-
-<!-- Banco de dados online-->
-<!-- Inicializa o Firebase -->
-<script type="module" src="./assets/js/firebase.js"></script>
-<script type="module" src="./assets/js/auth_pin.js"></script>
-
-
-<!-- Sistema de autenticação -->
-<script type="module" src="./assets/js/auth.js"></script>
-
-<!-- Scripts principais do app -->
-<script type="module" src="./assets/js/tarefas.js"></script>
-<script type="module" src="./assets/js/sync.js"></script>
 </body>
 </html>
 
